--- a/ShopWebsiteServerSide/appsettings.json
+++ b/ShopWebsiteServerSide/appsettings.json
@@ -23,11 +23,11 @@
     "Original": "/images/eed/"
   },
   "ImageUrl": {
-    "Original": "http://163.22.17.198:7777/images/eed"
+    "Original": "http://localhost/images/eed"
   },
   "Tokens": {
-    "Key": "ElectricalEngineeringDepartment",
-    "Issuer": "https://new.ncnu.ee.edu.tw/",
-    "Audience": "https://new.ncnue.ee.edu.tw/"
+    "Key": "ShopWebsiteDotNetTechnology",
+    "Issuer": "l27.0.0.1",
+    "Audience": "127.0.0.1"
   }
 }
