update image api

--- a/ShopWebsiteServerSide/appsettings.json
+++ b/ShopWebsiteServerSide/appsettings.json
@@ -20,10 +20,10 @@
     }
   },
   "ImageDirectory": {
-    "Original": "/images/eed/"
+    "Original": "D:\\images\\"
   },
   "ImageUrl": {
-    "Original": "http://localhost/images/eed"
+    "Original": "http://localhost:7777/images"
   },
   "Tokens": {
     "Key": "ShopWebsiteDotNetTechnology",
