--- a/ShopWebsiteServerSide/ShopWebsiteServerSide.csproj
+++ b/ShopWebsiteServerSide/ShopWebsiteServerSide.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Models\AccountModels\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
