update new connection string to remote server

--- a/ShopWebsiteServerSide/appsettings.json
+++ b/ShopWebsiteServerSide/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ShopWebsite;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=163.22.17.212;Database=ShopWebsite;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=163.22.17.212;Initial Catalog=ShopWebsite;Integrated Security=False;User ID=sa;Password=abcd@1234;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -16,10 +17,10 @@
     }
   },
   "ImageDirectory": {
-    "Original": "D:\\images\\"
+    "Original": "/images/eshopping/"
   },
   "ImageUrl": {
-    "Original": "http://localhost:7777/images"
+    "Original": "http://163.22.17.212:6666/images"
   },
   "Tokens": {
     "Key": "ShopWebsiteDotNetTechnology",
