change image url, package version

--- a/ShopWebsiteServerSide/appsettings.json
+++ b/ShopWebsiteServerSide/appsettings.json
@@ -20,7 +20,7 @@
     "Original": "/images/eshopping/"
   },
   "ImageUrl": {
-    "Original": "http://163.22.17.212:6666/images"
+    "Original": "http://163.22.17.212:8888/images/eshopping"
   },
   "Tokens": {
     "Key": "ShopWebsiteDotNetTechnology",
