update matrix factorization constant

--- a/ShopWebsiteServerSide/appsettings.json
+++ b/ShopWebsiteServerSide/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=163.22.17.212;Database=ShopWebsite;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Data Source=163.22.17.212;Initial Catalog=ShopWebsite;Integrated Security=False;User ID=sa;Password=abcd@1234;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    //"DefaultConnection": "Server=.;Database=ShopWebsite;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=163.22.17.212;Initial Catalog=ShopWebsite;Integrated Security=False;User ID=sa;Password=abcd@1234;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"    
   },
   "Logging": {
     "IncludeScopes": false,
