--- a/ShopWebsite.BLL/ShopWebsite.BLL.csproj
+++ b/ShopWebsite.BLL/ShopWebsite.BLL.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PayPalCore\PayPalCore.csproj" />
     <ProjectReference Include="..\ShopWebsite.Common\ShopWebsite.Common.csproj" />
     <ProjectReference Include="..\ShopWebsite.DAL\ShopWebsite.DAL.csproj" />
   </ItemGroup>
