--- a/ShopWebsiteServerSide/appsettings.json
+++ b/ShopWebsiteServerSide/appsettings.json
@@ -27,6 +27,19 @@
     "Issuer": "l27.0.0.1",
     "Audience": "127.0.0.1"
   },
-  "PaypalClientId": "ARSYkftTeO37wBZrHn7G-fPasi0q7HcsrCpS3P75ztUvtY_a2VFj3hdUDxJquMF0w5EVn5U-oMFEqrNr",
-  "PaypalClientSecret": "EB1gwS-6s89OF1aX1h46RG7KdYYM-gKanAJuy0QigaUd2mo9Pa7TAj1eTz947nfVHPvr6Ue-W2gXy8bt"
+  "Paypal": {
+    "PaypalClientId": "ARSYkftTeO37wBZrHn7G-fPasi0q7HcsrCpS3P75ztUvtY_a2VFj3hdUDxJquMF0w5EVn5U-oMFEqrNr",
+    "PaypalClientSecret": "EB1gwS-6s89OF1aX1h46RG7KdYYM-gKanAJuy0QigaUd2mo9Pa7TAj1eTz947nfVHPvr6Ue-W2gXy8bt",
+    "Payee": {
+      "email": "karma.doityourself-facilitator@gmail.com",
+      "merchant_id": "HK2P53P3SDQCY"
+    },
+    "RedirectUrls": {
+      "ReturnUrl": "https://eshopee.me:9999/product-order-search",
+      "CancelUrl": "https://eshopee.me:9999/product-order-search"
+    },
+    "DefaultTransaction": {
+      "Description": "Transaction description."
+    }
+  }
 }
