add email service

--- a/ShopWebsiteServerSide/appsettings.json
+++ b/ShopWebsiteServerSide/appsettings.json
@@ -41,5 +41,11 @@
     "DefaultTransaction": {
       "Description": "Transaction description."
     }
+  },
+  "SendGrid": {
+    "ApiKey": "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",
+    "Template": {
+
+    }
   }
 }
