--- a/ShopWebsiteServerSide/appsettings.json
+++ b/ShopWebsiteServerSide/appsettings.json
@@ -43,9 +43,15 @@
     }
   },
   "SendGrid": {
-    "ApiKey": "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",
+    //Key mới: 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
+    //Key cũ: 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
+    // template cũ: 34410afc-273b-4c86-87b8-ee7b19bd8c31
+    // template mới: eeaf29c5-30b3-407a-9dce-1397307d125e
+    "ApiKey": "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",
     "Template": {
-
-    }
+      "OrderSuccess": "eeaf29c5-30b3-407a-9dce-1397307d125e"
+    },
+    "EmailFrom": "karma.doityourself@gmail.com",
+    "EmailFromName": "EShopee"
   }
 }
